Updating to v1.4.0
